Fixed cart not showing

--- a/src/components/NavHeader/_index.scss
+++ b/src/components/NavHeader/_index.scss
@@ -38,6 +38,8 @@ header {
             }
             p {
                 font-size: 12px;
+                margin-right: 4px;
+                font-weight: 500;
             }
             button {
                 display: flex;
